# phoenix

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CARPARK.md  CLAUDE.md  GEMINI.md  README.md  REPO_MAP.md  SKILL.md  conftest.py  pyproject.toml  setup.py
CONSTITUTION/: CONSTITUTION_MANIFEST.yaml  README.md
analysis/: __init__.py  autopsy.py  learning_extractor.py
approval/: __init__.py  evidence.py
athena/: __init__.py  bead_types.py  claim_banned_phrases.yaml  claim_linter.py  conflict_detector.py  history.py  polar_pairs.yaml  rate_limiter.py  semantic.py  store.py
brokers/: __init__.py
cartridges/: README.md
cfp/: __init__.py  api.py  banned_patterns.yaml  bead_adapter.py  budget.py  conflict_display.py  executor.py  linter.py  river_adapter.py  validation.py
checkpoint/: __init__.py  checkpoint.py  momentum_extractor.py  session_manager.py
cli/: phoenix_status.py
config/: __init__.py  cso_params.yaml  loader.py  pairs.yaml  schema.py  survivor_criteria.yaml
contracts/: GOVERNANCE_INTERFACE_CONTRACT.md  README.md  mirror_markers.py  truth_teller.py  verify_schema.py
cso/: __init__.py  alerts.py  beads.py  bit_vector.py  consumer.py  contract.py  drawer.py  evaluator.py  multi_pair.py  observer.py  params_loader.py  scanner.py  strategy_core.py  structure_detector.py
daemons/: __init__.py  lens.py  routing.py  watcher.py
data/: __init__.py  athena.db  river_reader.py
dispatcher/: __init__.py  dispatcher.py  heartbeat.py  tmux_control.py  types.py  worker_base.py
docs/: BEYOND_S39_SCOPE.md  CHAIN_VALIDATION_REPORT.md  CHAOS_V3_REPORT.md  MONITORING_REPORT.md  PHOENIX_FOUNDATION_OVERVIEW.md  PHOENIX_MANIFEST.md  PHOENIX_MANIFESTO.md  S40_COMPLETION_REPORT.md  SPRINT_26.md  SPRINT_ROADMAP.md  SPRINT_STATUS.md  VISUAL_ANCHOR_MAP.md
drills/: .soak_state.json  d1_chaos_vectors.py  d1_verification.py  d2_chaos_vectors.py  d2_verification.py  d3_chaos_vectors.py  d3_negative_test.py  d3_verification.py  d4_verification.py  ibkr_paper_trade_roundtrip.py  ibkr_paper_validation.py  rb004_halt_drill.py  s41_phase3_live_validation.py  s42_failure_playbook.py  s44_soak_test.py
enrichment/: __init__.py
execution/: __init__.py  broker_stub.py  halt_gate.py  intent.py  position.py  replay.py
governance/: __init__.py  backoff.py  cartridge.py  circuit_breaker.py  errors.py  halt.py  health_fsm.py  insertion.py  interface.py  lease_types.py  runtime_assertions.py  slm_boundary.py  stale_gate.py  telemetry.py  tokens.py  types.py
hunt/: __init__.py  budget.py  executor.py  grid.py  hypothesis.py  output.py  queue.py
intake/: .gitignore
intelligence/: __init__.py  backends.py  llm_client.py
lab/: __init__.py  backtester.py  hpg_parser.py  hunt.py  variation_generator.py
leases/: README.md
lens/: __init__.py  response_writer.py
memory/: __init__.py  athena.py  bead_store.py  query_parser.py
mocks/: __init__.py  mock_cse_generator.py
monitoring/: __init__.py  alerts.py  dashboard.py  kill_manager.py  signalman.py  state_anchor.py
narrator/: __init__.py  data_sources.py  renderer.py  surface.py  templates.py
notification/: __init__.py  alert_aggregator.py  alert_taxonomy.py  telegram_notifier.py
orientation/: __init__.py  generator.py  validator.py
packaging/: README.md  build_dmg.sh  setup_app.py
reports/: BUNNY_REPORT_S30.md  BUNNY_REPORT_S31.md  BUNNY_REPORT_S32.md  BUNNY_REPORT_S33_P1.md  CHAOS_BUNNY_REPORT.md  D1_COMPLETION_REPORT.md  D2_COMPLETION_REPORT.md  D3_COMPLETION_REPORT.md  D4_COMPLETION_REPORT.md  HISTORICAL_NUKES_REPORT.md  LIAR_PARADOX_REPORT.md  MIRROR_TEST_REPORT.md  NEX_SALVAGE_REPORT.md  S34_COMPLETION_REPORT.md  TRACK_B_REPORT.md  TRACK_C_REPORT.md  TRACK_D_REPORT.md  chaos_bunny_results.json  historical_nukes_results.json  liar_paradox_results.json  mirror_test_results.json
responses/: approve_responses.md  (+8 more)
(+425 files in other folders)
